...
        android:id="@+id/open_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Settings" />

    <Button
        android:id="@+id/open_lessons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="Lessons" />

    <Button
...
